improve oracle feature